<resources>
    <string name="app_name">LittleBrotherAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_user_doc">User documentation</string>

    <string name="menu_user_doc">User Doc.</string>
    <string name="menu_little_brothers">My Big Brothers</string>
    <string name="menu_big_brothers">My Little Brothers</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_add_camera">Ajouter Camera</string>
    <string name="menu_map">Map</string>

    <string name="already_registered">already registered</string>
    <string name="create_account">create account</string>

    <string name="button_signin">sign in</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_add_camera">Ajouter une caméra</string>

    <string name="text_btn_map">Adresse, ville, code postal</string>
    <string name="cle_api">AIzaSyBqr3PwJjBRDcnsf0HmhaAfWaBlFtL2EEg</string>
    <string name="channel_name">main_channel</string>
    <string name="channel_description">channel for alert of people getting in zone</string>

</resources>